# trillioner-service/src/main/java/ru/dhabits/fixchaos/trillioner/inbound/rest/shorttermgoal/createshorttermgoal/mapper/CreateShortTermGoalMapper.java
@@ -1,0 +1,4 @@
+package ru.dhabits.fixchaos.trillioner.inbound.rest.shorttermgoal.createshorttermgoal.mapper;
+
+public class CreateShortTermGoalMapper {
+}
